--- a/package.json
+++ b/package.json
@@ -1,19 +1,90 @@
 {
-    "version": "3.0.0",
-    "name": "react-native-root-siblings",
-    "repository": {
-        "type": "git",
-        "url": "git@github.com:magicismight/react-native-root-siblings.git"
-    },
-    "license": "MIT",
-    "description": "react native root sibling elements manager",
-    "dependencies": {
-        "static-container": "^1.0.0"
-    },
-    "keywords": [
-        "react-component",
-        "react-native",
-        "ios",
-        "android"
+  "_args": [
+    [
+      {
+        "raw": "react-native-root-siblings@^1.0.7",
+        "scope": null,
+        "escapedName": "react-native-root-siblings",
+        "name": "react-native-root-siblings",
+        "rawSpec": "^1.0.7",
+        "spec": ">=1.0.7 <2.0.0",
+        "type": "range"
+      },
+      "/Users/pzzh/Desktop/StarCloud/starCloudApp/node_modules/@timehello/react-native-root-toast"
     ]
+  ],
+  "_cnpm_publish_time": 1489485538069,
+  "_from": "react-native-root-siblings@>=1.0.7 <2.0.0",
+  "_id": "react-native-root-siblings@1.2.0",
+  "_inCache": true,
+  "_location": "/react-native-root-siblings",
+  "_nodeVersion": "6.5.0",
+  "_npmOperationalInternal": {
+    "host": "packages-12-west.internal.npmjs.com",
+    "tmp": "tmp/react-native-root-siblings-1.2.0.tgz_1489485537815_0.5871809744276106"
+  },
+  "_npmUser": {
+    "name": "magicismight",
+    "email": "master@horcrux.cn"
+  },
+  "_npmVersion": "3.10.3",
+  "_phantomChildren": {},
+  "_requested": {
+    "raw": "react-native-root-siblings@^1.0.7",
+    "scope": null,
+    "escapedName": "react-native-root-siblings",
+    "name": "react-native-root-siblings",
+    "rawSpec": "^1.0.7",
+    "spec": ">=1.0.7 <2.0.0",
+    "type": "range"
+  },
+  "_requiredBy": [
+    "/@timehello/react-native-root-toast"
+  ],
+  "_resolved": "https://registry.npm.taobao.org/react-native-root-siblings/download/react-native-root-siblings-1.2.0.tgz",
+  "_shasum": "bc8d2b73528089ad6e001f8c8931394f1eaab8d4",
+  "_shrinkwrap": null,
+  "_spec": "react-native-root-siblings@^1.0.7",
+  "_where": "/Users/pzzh/Desktop/StarCloud/starCloudApp/node_modules/@timehello/react-native-root-toast",
+  "bugs": {
+    "url": "https://github.com/magicismight/react-native-root-siblings/issues"
+  },
+  "dependencies": {
+    "static-container": "^1.0.0"
+  },
+  "description": "react native root sibling elements manager",
+  "devDependencies": {},
+  "directories": {},
+  "dist": {
+    "shasum": "bc8d2b73528089ad6e001f8c8931394f1eaab8d4",
+    "size": 8301,
+    "noattachment": false,
+    "tarball": "http://registry.npm.taobao.org/react-native-root-siblings/download/react-native-root-siblings-1.2.0.tgz"
+  },
+  "gitHead": "da033347e8137a2314edbb6728f3173139ee2908",
+  "homepage": "https://github.com/magicismight/react-native-root-siblings#readme",
+  "keywords": [
+    "react-component",
+    "react-native",
+    "ios",
+    "android"
+  ],
+  "license": "MIT",
+  "main": "./lib/SiblingsManager",
+  "maintainers": [
+    {
+      "name": "magicismight",
+      "email": "530337602@qq.com"
+    }
+  ],
+  "name": "react-native-root-siblings",
+  "optionalDependencies": {},
+  "publish_time": 1489485538069,
+  "readme": "ERROR: No README data found!",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/magicismight/react-native-root-siblings.git"
+  },
+  "scripts": {},
+  "version": "1.2.0"
 }
